objects/Expense_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_Amount__c</fullName>
        <label>Contribution Amount</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <label>Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Member</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Expense Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>